# PACE-Parental-Assistance-Communication-Engine

./: .env.example  .gitignore  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
app/: bart_guard.py  groq_client.py  llm_client.py  main.py  ollama_client.py  post_guard.py  prompts.py  session_manager.py
scripts/: evaluate.py  test_context.py  verify_guard.py
tests/: golden_dataset.json
web/: app.js  index.html
